[build-system]
requires = ["setuptools>=61.0", "wheel", "nnetsauce>=0.17.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlreserving"
description = "Model-agnostic Probabilistic Machine Learning Reserving"
requires-python = ">=3.7"
authors = [
    {name = "T. Moudiki", email = "thierry.moudiki@gmail.com"},
]
dependencies = [
    "nnetsauce>=0.17.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/Techtonique/mlreserving"

[tool.setuptools]
packages = ["mlreserving"]

[tool.setuptools.dynamic]
version = {attr = "mlreserving.__version__"}

[tool.setuptools.package-data]
mlreserving = ["*.py"]
